Russia focus work I forgot to push

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -1077,6 +1077,27 @@
   PBNews.271.d:0 "The concert of Europe has been shattered by the ravaging of war. After a series of negotiations, the Berlin Administration has been completely annexed by Russia's ally the Prussian State. Originally created to handle the occupation and reconstruction of the Russian half of Germany, the Berlin Administration has been fully incorporated into Prussia. Immediately after the signing of the papers, Prussian head of state, Philipp Bouhler, has announced his plans to integrate this new territory into 'True Germany' and to purge all 'Jacobin and non-German Influence' from the country. The sheer size of territory annexed so quickly has placed a strain on the Prussian administration."
   PBNews.271.a:0 "Germans! Here we stand!"
 
+  PBNews.272.t:0 "KADETS WIN RUSSIAN ELECTIONS"
+  PBNews.272.d:0 "In the first elections ever held in the Russian Empire, the Kadets have won a majority in the Duma and are expected to form a government in the coming days. Established in the midst of the Alexandrian Reforms, the Constitutional Democratic Party represents a big tent of conservative factions, kept in line by the leadership of newly minted prime minister Alexander Guchkov.\n\nWith a new electoral mandate, the Kadet government is expected to continue on a path of moderate liberalization."
+  PBNews.272.a:0 "A Moderate Approach is Needed."
+
+  PBNews.273.t:0 "AGRARIAN VICTORY IN RUSSIA"
+  PBNews.273.d:0 "In the first elections ever held in the Russian Empire, the Zemstvoites have won a majority in the Duma. Initially established by the Alexandrian reforms, the Zemstvo began as a system of peasant councils within Russia, intended to offer some degree of political autonomy.\n\nOver time, the Zemstvo became the birthplace of the Zemstvo Party, largely representing the land-owning middle and upper class of the Russian peasantry. With a mix of conservative and liberal policy, the Zemstvoite coalition maintains a respectable majority in parliament at the present moment."
+  PBNews.273.a:0 "The peasants take the reigns."
+
+  PBNews.274.t:0 "NATIONALISTS SWEEP DUMA"
+  PBNews.274.d:0 "In the first elections ever held in the Russian Empire, the National Coalition has taken a majority in the Duma. One of the most established parties in Russia, the Nationalists have been a motivating force in Imperial politics for the last decade. Finding their roots in the ennui of the postwar Russian political scene, the Nationalists advocate for a restructuring of the Russian economy and a shift towards a more diplomatically expansionist stance.\n\nWhile an unsurprising victory, the Nationalists seem likely to attempt to modify or even outright revoke the reforms that brought them to power in the first place."
+  PBNews.274.a:0 "Unity and Nation!"
+
+  PBNews.275.t:0 "NARODNIKS IN RUSSIAN DUMA"
+  PBNews.275.d:0 "In the first elections ever held in the Russian Empire, the Narodniks have surprisingly achieved a majority in parliament. An older movement in Russian politics, the Narodniks trace their origins to the late 1800s with the growth of the Russian intelligentsia.\n\nHaving broken off from their more revolutionary elements, the Narodnik government is seeking to push a number of reforms to the Russian economy and political structure, expanding the role of labour unions and the peasantry in politics."
+  PBNews.275.a:0 "A softer kind of revolution."
+
+  PBNews.276.t:0 "MILITARY COUP IN RUSSIA"
+  PBNews.276.d:0 "Chaos in the streets of St. Petersburg as forces of the Imperial Russian Army stormed the Duma and Winter Palace, taking both with relative ease. Landships and Automats patrol the streets of Russia's major Western cities, quickly putting down civilian resistance and routing Loyalist elements.\n\nThe coup plotters, including General Anton Denikin and aristocrat Felix Yusupov, appeared on Russian kinegrams to announce the formation of the "State Committee on the State of Emergency"."
+  PBNews.276.a:0 "Alexander turns in his grave."
+
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
