--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -342,7 +342,32 @@
   PB_RUS_Leftist_Economy:0 "For the Working Class"
 
   PB_RUS_Address_the_Duma:0 "Address the Reformists in the Duma"
+  PB_RUS_Ministry_of_Academics:0 "Establish the Ministry of Academics"
+  PB_RUS_Curtail_Blackhundredists:0 "Curtain the Blackhundredists"
+  PB_RUS_Subsume_Blackhundredists:0 "Subsume the Blackhundredists"
+  PB_RUS_Student_Protests:0 "Deal with the Student Protests"
 
+  PB_RUS_Reverse_Alexandrian_Reforms:0 "Reverse the Alexandrian Reforms"
+  PB_RUS_Ban_Left_Parties:0 "Put a Finger on the Scales"
+  PB_RUS_Resinstate_Press_Controls:0 "Revive State Press Controls"
+  PB_RUS_Back_to_the_Kitchen:0 "Crack down on the Women's Committees"
+  PB_RUS_Meh_on_Feminism:0 "Seen, but Not Heard"
+  PB_RUS_Curtail_Regional_Autonomy:0 "Curtail Regional Autonomy"
+  PB_RUS_Party_State:0 "Dreams of a Party State"
+  PB_RUS_Unenlightened_Masses:0 "Guide the Unenlightened Masses"
+  PB_RUS_A_United_Russia:0 "The Stoylpinist Legacy Secured"
+
+  PB_RUS_Glasnost:0 "Glasnost Policy"
+  PB_RUS_Federalism:0 "Imperial Federalism"
+  PB_RUS_Autonomism:0 "Expand the Autonomist Model"
+  PB_RUS_Abolish_Gulag:0 "Abolish the Aleutian Islands Sector"
+  PB_RUS_Weaponize_Middle_Class:0 "Weaponize the Middle Class"
+  PB_RUS_Declaration_of_Rights:0 "The New Declaration of Rights"
+  PB_RUS_Constitutional_Monarchy:0 "Relinquish Tsarist Authority"
+  PB_RUS_Support_Lunacharsky:0 "Support the Lunacharskyites"
+  PB_RUS_Perfect_Democracy:0 "In Search of a Perfect Democracy"
+  PB_RUS_Slavic_Union:0 "The Brotherhood of the East"
+  PB_RUS_Revolutionary_Empire:0 "The Evolution of Revolution"
 
   ########################## 
   # Decisions
