Good American Content

--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -21,6 +21,8 @@
   PM_AME_American_BAF_Investment:0 "Promote Trade With The British African Authority"
   PM_AME_American_East_Africa_Investment:0 "Reinforce American Interests In East Africa"
   PM_AME_American_Acadiana_Investment:0 "Secure Our Influence In Acadia"
+  PM_AME_American_Decry_Hibernia_Annexation:0 "Decry the Annexation of Ireland"
+  PM_AME_American_Decry_Hibernia_Annexation_desc:0 "Hibernia has been betrayed. After years of mismanagement and discrimination by London towards the Irish, the unavoidable happened. An uprising.\nWe withheld our support to both sides and hoped for a quick end to the violent conflict. We expected a new approachment from London towards Ireland after the conflict, especially in the light that the Dublin Government showed their loyalty to the Confederation.\nBut the British Expansionists have used this chance to restablish complete authority over Ireland. It seems like even their closest neighbours will never be equal. How long until they come for us? "
 
   PM_ENG_Promote_Anglo_Irish_Unity:0 "Promote Anglo-Irish Unity"
   PM_ENG_Trade_with_Quebec:0 "Offer Economic Incentives To Quebec"
@@ -40,6 +42,8 @@
 
   AME_Imperial_Civil_War_Ceasfire:0 "Imperial Civil War Ceasfire"
   AME_Imperial_Civil_War_Ceasfire_desc:0 ""
+
+  AME_Cost_Reduction_Ireland_Special:0 "£decision_icon_small §YDecision Cost§! of All Aligned Decisions in the Balance of Power will be §Greduced§!"
 
   AME_John_Curtin_Irish_Special:0 "Due to John Curtin's Irish Heritage £decision_icon_small §YDecision Cost§! regarding Irish Affairs in the Balance of Power will be §Greduced§!"
 
