--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -1254,7 +1254,7 @@ AME_the_aberhard_administration_desc:0 ""
 ##########################
 
 Unicom.1.t:0 "The Automation Crisis hits America"
-Unicom.1.d:0 "The Automation Crisis in the United Kingdom has spread to the rest of the Empire, hitting the Commonwealth particularly hard due to our reliance on the EIEC’s economic investments. Over a million people have almost instantly been put out of a job, including a number of American veterans.\n\nThe situation has lead to a dramatic breakdown of stability across the country as people campaign for the return of their jobs or even stage riots to attack automated factories, leading to conflicts with EIEC strikebreakers and the Pinkertons."
+Unicom.1.d:0 "The Automation Crisis, which began in the United Kingdom, has spread to the rest of the Empire, hitting the Commonwealth particularly hard due to our reliance on the EIEC’s economic investments. Over a million people have almost instantly been put out of a job, including a number of American veterans.\n\nThe situation has lead to a dramatic breakdown of stability across the country as people campaign for the return of their jobs or even stage riots to attack automated factories, leading to conflicts with EIEC strikebreakers and the Pinkertons."
 Unicom.1.a:0 "Get Edison representatives on the phone. Now."
 
 Unicom.2.t:0 "Edison's Counterattack"
