--- a/localisation/english/PB_Holland_l_english.yml
+++ b/localisation/english/PB_Holland_l_english.yml
@@ -9,13 +9,46 @@ HOL_Estates_General:0 "Colonial Administration"
 HOL_Estates_General_desc:0 "WIP"
 
   ##########################
+  # TOOLTIPS
+  ##########################
+
+  islands_enfranchisment_tooltip:0 "§Yhello§!"
+  islands_fold_tooltip:0 "§Yyoure gay§!"
+  defend_binnenhof:0 "§YWith our limited resources and men we will try to seize Binnenhof for ourselves and set up to defend against the Regenten alligned forces and police officers.§!"
+  convene_estates_general:0 "§tThe next few months will be the deciding factor for the future of this country, anything could happen so tred carefully.§!"
+  democracy_debate:0 "§3This decision will decide the fate of the North Sea islands under our control. It will be up to us to decide whether the Estates-General will allow the islands to join the ranks of the Free Provinces or to fall under the oligarchic rule of the Regenten.§!"
+
+  ##########################
+  # BOP
+  ##########################
+
+HOL_government_balance:0 "The Dualist System"
+HOL_republicans:0 "Republicans"
+HOL_regenten:0 "Regenten"
+HOL1_balance_range:0 "Undecided Political Leanings"
+
+HOL_republicans_side_low_control_range:0 "Slight Republican Majority"
+HOL_republicans_side_medium_control_range:0 "Medium Republican Majority"
+HOL_republicans_side_mid_high_control_range:0 "Medium High REpublican Majority"
+HOL_republicans_side_high_control_range:0 "High Republican Majority"
+HOL_republicans_side_total_control_range:0 "Republican Majority"
+
+HOL_regenten_side_low_control_range:0 "Slight Regenten Majority"
+HOL_regenten_side_medium_control_range:0 "Medium Regenten Majority"
+HOL_regenten_side_mid_high_control_range:0 "Medium High Regenten Majority"
+HOL_regenten_side_high_control_range:0 "High Regenten Majority"
+HOL_regenten_side_total_control_range:0 "Regenten Majority"
+
+  
+
+  ##########################
   # EVENTS
   ##########################
 
 #starting tree
 holland.0.t:0 "The Democracy Debate"
-holland.0.d:0 "WIP"
-holland.0.a:0 "Begin the vote!"
+holland.0.d:0 "The debate is upon us. Politicians and citizens shiver at the thought of its results. It will decide so much, yet seem so insignificant at the same time. At least that depends on who comes out on top.\n\nLet us enter the Estates-General and see what the future will bring to this nation and what it will mean for our dreams, values and liberties. The country is split between two clear sides with no clear majority. We have had great struggles and significant decisions before, but this time there is no Stadholder to hold our hands, no Prussian King to protect us, a British navy to defend our coastline and importantly no Thorbecke to get us through hard times or to make our decisive decisions for us.\n\nLet the debate begin."
+holland.0.a:0 "......"
 holland.2.t:0 "The Voting Results"
 holland.2.d:0 "WIP"
 holland.2.a:0 "The vote is successfull!"
@@ -26,9 +59,9 @@ holland.4.t:0 "Edison-Philips Partnership"
 holland.4.d:0 "WIP"
 holland.4.a:0 "Send them the offer!"
 holland.5.t:0 "Dutch Partnership Offer"
-holland.5.d:0 "WIP"
+holland.5.d:0 "The Dutch electronic magnate Philips has offered a deal for a partnership with them."
 holland.5.a:0 "Accept their offer!"
-holland.6.t:0 "English Government Accepts"
+holland.6.t:0 "Edison Electric Accepts"
 holland.6.d:0 "WIP"
 holland.6.a:0 "Let's get to work!"
 #colonial tree
@@ -61,9 +94,13 @@ holland.9e.a:0 "A testimony to diplomacy!"
 holland.10.t:0 "The V.O.C's Offer"
 holland.10.d:0 "WIP"
 holland.10.a:0 "Accept their offer!"
+holland.10.b:0 "Refuse their offer."
 holland.11.t:0 "The Commission's Reply"
 holland.11.d:0 "WIP"
 holland.11.a:0 "The V.O.C. grows larger!"
+holland.11b.t:0 "The Commission's Reply"
+holland.11b.d:0 "WIP"
+holland.11b.a:0 "How could they refuse?"
 holland.12.t:0 "Introduction of Conscription"
 holland.12.d:0 "WIP"
 holland.12.a:0 "We cannot deny this."
@@ -75,7 +112,44 @@ holland.13.c:0 "Limited Autonomy"
 holland.14.t:0 "Fate of the Bandits"
 holland.14.d:0 "WIP"
 holland.14.a:0 "Imprison them!"
-holland.14.a:0 "Excecute the bastards!"
+holland.14.b:0 "Excecute the bastards!"
+#republican
+holland.15a.t:0 "The Defense of Binnenhof"
+holland.15a.d:0 "WIP"
+holland.15a.a:0 "Our time is now!"
+holland.15b.t:0 "Last Efforts In Vain"
+holland.15b.d:0 "WIP"
+holland.15b.a:0 "We have failed ourselfs."
+holland.17.t:0 "25 republicans"
+holland.17.d:0 "WIP"
+holland.17.a:0 "a"
+holland.19.t:0 "50 republicans"
+holland.19.d:0 "WIP"
+holland.19.a:0 "b"
+holland.21.t:0 "The Final Decision"
+holland.21.d:0 "WIP"
+holland.21.a:0 "Occupy Binnenhof and defend it!"
+holland.21.b:0 "Storm the Estates-General!"
+#regenten
+holland.16a.t:0 "Republcians Defeated"
+holland.16a.d:0 "WIP"
+holland.16a.a:0 "Our time is now!"
+holland.16b.t:0 "Succesfull Republican Coup"
+holland.16b.d:0 "WIP"
+holland.16b.a:0 "We have failed ourselfs."
+holland.18.t:0 "25 regenten"
+holland.18.d:0 "WIP"
+holland.18.a:0 "Our time is now!"
+holland.20.t:0 "50 regenten"
+holland.20.d:0 "WIP"
+holland.20.a:0 "Our time is now!"
+holland.22.t:0 "The Final Decision"
+holland.22.d:0 "WIP"
+holland.22.a:0 "a"
+holland.22.b:0 "b"
+holland.23.t:0 "70 regenten"
+holland.23.d:0 "WIP"
+holland.23.a:0 "Our time is now!"
 
 
   ##########################
@@ -85,6 +159,10 @@ PB_HOL_colonial_influence:0 "V.O.C. Profits"
 PB_HOL_colonial_influence_desc:0 "WIP"  
 PB_HOL_road_wars:0 "The Road War"
 PB_HOL_road_wars_desc:0 "WIP"
+PB_HOL_recent_unification:0 "Recent Afrikaner Unification"
+PB_HOL_recent_unification_desc:0 "WIP"
+PB_HOL_boer_bloc:0 "The Boer Economic Bloc"
+PB_HOL_boer_bloc_desc:0 "WIP"
 PB_HOL_dualistic_system:0 "Dualistic System"
 PB_HOL_dualistic_system_desc:0 "The provinces of the Dutch Republic can be roughly categorised into two types.\n\nThe first are the “regenten” provinces, where representatives to the States General are elected by urban noblemen and merchant families. Holland is the most influential among these and is often the deciding say in who becomes State Pensionary.\n\nSecond are the “free” provinces which have public referendums to elect their representatives, although laws within these provinces may differ in who is enfranchised.\nFor most of the republic’s modern history these have been rural regions without an entrenched merchant or landowning class.\nHowever the shocking admission of Flanders as a free province in 1898 permanently upset the balance of power, and ever since the two provincial blocs have been locking horns, both vying to stymie the other’s power and impose their grand visions for the republic."
 PB_HOL_republican_agitation_1:0 "Republican Agitation - §Y(Small)§!" 
@@ -122,7 +200,7 @@ HOL_crisis_in_the_chamber_desc:0 "WIP"
 HOL_new_security_law:0 "The New Security Law"
 HOL_new_security_law_desc:0 "WIP"
 HOL_democracy_debate:0 "The Democracy Debate"
-HOL_democracy_debate_desc:0 "WIP"
+HOL_democracy_debate_desc:0 "The fledgling princely hatred rose to the highest level\nAgainst the surly northern vassals,\nWhose beards descend upon their armour, hard and\nRough as dirty black frozen waterfalls.\n-J. Slauerhoff"
 HOL_audit_civil_servants:0 "Audit the Civil Servants"
 HOL_audit_civil_servants_desc:0 "WIP"
 HOL_islands_into_the_fold:0 "Bring the Islands Into the Fold"
