--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -40,6 +40,8 @@ AME_Dominion_Eco_Power_Take_Over_tt:0 "£GFX_decision_icon_small §BUnlocks deci
 
 AME_Green_Heart_Donations:0 "§GEvery Dominion and Commenwealth will gain one free civilian factory and Industrial research bonus.§!"
 
+AME_Cost_Reduction_Confrontation_Special:0 "£decision_icon_small §YDecision Cost§! of All Aligned Decisions in the Balance of Power will be §Greduced§!"
+
 ##########################
 # PARTIES
 ##########################
