--- a/localisation/english/PB_Holland_l_english.yml
+++ b/localisation/english/PB_Holland_l_english.yml
@@ -12,11 +12,16 @@ HOL_Estates_General_desc:0 "WIP"
   # TOOLTIPS
   ##########################
 
-  islands_enfranchisment_tooltip:0 "§Yhello§!"
-  islands_fold_tooltip:0 "§Yyoure gay§!"
+  islands_enfranchisment_tooltip:0 "§YThe Regenten won't accept this vote as fair and are going to try to regain power.§!"
+  islands_fold_tooltip:0 "§YThe Republicans will be deeply opposed to this option and will fight for liberty.§!"
   defend_binnenhof:0 "§YWith our limited resources and men we will try to seize Binnenhof for ourselves and set up to defend against the Regenten alligned forces and police officers.§!"
   convene_estates_general:0 "§tThe next few months will be the deciding factor for the future of this country, anything could happen so tred carefully.§!"
   democracy_debate:0 "§3This decision will decide the fate of the North Sea islands under our control. It will be up to us to decide whether the Estates-General will allow the islands to join the ranks of the Free Provinces or to fall under the oligarchic rule of the Regenten.§!"
+  special_decision:0 "§1This is a special decision and can only be taken once in a while§!"
+  allow_act:0 "§YThis will allow the Republicans to pass perhaps unwanted legislation§!"
+  disallow_act:0 "§YThis will allow us to push the opposition out of the Estates-General§!"
+  talking_blues:0 "§YThe VBD might want to enter into a coalition with us later down the line.§!"
+  masters_of_war:0 "§YWith the military on side we will be able to continue our plans for now§!"
 
   ##########################
   # BOP
@@ -25,7 +30,7 @@ HOL_Estates_General_desc:0 "WIP"
 HOL_government_balance:0 "The Dualist System"
 HOL_republicans:0 "Republicans"
 HOL_regenten:0 "Regenten"
-HOL1_balance_range:0 "Undecided Political Leanings"
+HOL1_balance_range:0 "No Majority"
 
 HOL_republicans_side_low_control_range:0 "Slight Republican Majority"
 HOL_republicans_side_medium_control_range:0 "Medium Republican Majority"
@@ -38,7 +43,16 @@ HOL_regenten_side_medium_control_range:0 "Medium Regenten Majority"
 HOL_regenten_side_mid_high_control_range:0 "Medium High Regenten Majority"
 HOL_regenten_side_high_control_range:0 "High Regenten Majority"
 HOL_regenten_side_total_control_range:0 "Regenten Majority"
+#decisions
+PB_HOL_regenten_support:0 "Increase Regenten Support"
+PB_HOL_raid_dissident_hostpots:0 "Raid Dissident Hotspots"
+PB_HOL_militarise_police_forces:0 "Militarise Police Forces"
+PB_HOL_show_of_force:0 "Show of Force"
 
+PB_HOL_pro_democracy_rallies:0 "Hold Pro-Democracy Rallies"
+PB_HOL_incite_wildcat_strike:0 "Incite a Wildcat Strike"
+PB_HOL_mass_media_campaign:0 "Mass Media Campaign"
+PB_HOL_underhanded_tactics:0 "Underhanded Tactics"
   
 
   ##########################
@@ -48,13 +62,14 @@ HOL_regenten_side_total_control_range:0 "Regenten Majority"
 #starting tree
 holland.0.t:0 "The Democracy Debate"
 holland.0.d:0 "The debate is upon us. Politicians and citizens shiver at the thought of its results. It will decide so much, yet seem so insignificant at the same time. At least that depends on who comes out on top.\n\nLet us enter the Estates-General and see what the future will bring to this nation and what it will mean for our dreams, values and liberties. The country is split between two clear sides with no clear majority. We have had great struggles and significant decisions before, but this time there is no Stadholder to hold our hands, no Prussian King to protect us, a British navy to defend our coastline and importantly no Thorbecke to get us through hard times or to make our decisive decisions for us.\n\nLet the debate begin."
-holland.0.a:0 "......"
-holland.2.t:0 "The Voting Results"
-holland.2.d:0 "WIP"
-holland.2.a:0 "The vote is successfull!"
-holland.2.b:0 "The vote fails!"
+holland.0.a:0 "Let us not stall further."
+holland.2.t:0 "Vote on the Status of the Islands"
+holland.2.d:0 "'Sir.' the aide began. 'As you know, the Estates-General has been debating the future of the North Sea Islands for a few days. All the votes except for yours have been collected. The count difference is razor-thin.' This isn't what he'd wanted to hear. Jacob Adriaan Kalff, the State-Pensionary, had failed to be convinced by the arguments provided by either the Free or the Regenten Provinces, but now it was up to him to decide the status of the islands.\n\nHe furrowed his brow and stared out his window. Whichever side won out would be the ones deciding the fate of the islands - able to enact any reforms in their favor. But no matter which side he picked, he'd be inviting ire from those he'd rejected. It was a question of whether the islands should become the economically-oriented provinces that the Regenten were hoping to create, or allow the new citizenry living there the freedom to elect more provincial representatives as per the wishes of the Free Provinces. Both arguments had their own drawbacks and that's what had made it so diffi - "Ahem." The aide cleared his throat, interrupting the State-Pensionary's train of thought.\n\n'Uh... Sir? What should I tell them?'"
+holland.2.a:0 "'Give it to the Free Provinces.'"
+holland.2.b:0 "'They'll go the Regenten Provinces.'"
 holland.3.t:0 "Convening The Estates-General"
-holland.3.a:0 "The country is divided!"
+holland.3.d:0 "The Dutch parliament was at a standstill. Parliament had been reconvened multiple times since both the Election Standards Act and the Dualism Restriction Act had been passed, but all of them had ended with no progress. Politicians amongst the Republicans parties and the Regenten circles had become intensely polarised, refusing to give a single inch to the other side, fearing that it would give them an advantage. Debates were fierce and rarely were the rules of parliamentary decorum acknowledged, let alone followed.\n\nNot long into the latest parliamentary session and a new verbal clash had already broken out over a relatively minor bill that had been proposed. Voices were raised and tensions were high. 'Ladies! Gentlemen! Please quiet down! This is not the place for such squabbling!' The chairman implored to his inattentive and uncaring audience. Nobody was listening. The shouting match grew louder. 'Everyone! Please!' The chairman's cries were ignored, as they had been across all of the latest sessions. He looked down at his feet, tense with frustration, anger, and resignation.\n\nThen, all of a sudden, a loud gasp. He quickly looked up. As he'd been looking at his feet, a member of the Republicans had charged the Regenten side of the House and thrown a punch towards another member. The punch was the final straw. Fury had overcome all the members of the House, and now what was once a volatile tension had exploded into complete chaos. The chairman could do nothing but watch."
+holland.3.a:0 "God help us."
 holland.4.t:0 "Edison-Philips Partnership"
 holland.4.d:0 "WIP"
 holland.4.a:0 "Send them the offer!"
@@ -110,7 +125,7 @@ holland.13.a:0 "Corporatist Haven"
 holland.13.b:0 "Colonial Paternalism"
 holland.13.c:0 "Limited Autonomy"
 holland.14.t:0 "Fate of the Bandits"
-holland.14.d:0 "WIP"
+holland.14.d:0 "At long last, we have secured control of the hinterlands of New Holland. As a result of this, we have captured many a bandit that used to roam the vast outback. Now we must choose their fate: imprisonment or execution..."
 holland.14.a:0 "Imprison them!"
 holland.14.b:0 "Excecute the bastards!"
 #republican
@@ -119,13 +134,16 @@ holland.15a.d:0 "WIP"
 holland.15a.a:0 "Our time is now!"
 holland.15b.t:0 "Last Efforts In Vain"
 holland.15b.d:0 "WIP"
-holland.15b.a:0 "We have failed ourselfs."
-holland.17.t:0 "25 republicans"
-holland.17.d:0 "WIP"
-holland.17.a:0 "a"
-holland.19.t:0 "50 republicans"
-holland.19.d:0 "WIP"
-holland.19.a:0 "b"
+holland.15b.a:0 "We have failed ourselves."
+holland.17.t:0 "Willem's Farm"
+holland.17.d:0 "liberal support"
+holland.17.a:0 "To be just like them."
+holland.19.t:0 "Talking Blues"
+holland.19.d:0 "pro-republican propaganda plans making fun of regenten"
+holland.19.a:0 "Everybody sees themselves."
+holland.24.t:0 "General Strike"
+holland.24.d:0 "collab with social democrats"
+holland.24.a:0 "Let your voice be heard!"
 holland.21.t:0 "The Final Decision"
 holland.21.d:0 "WIP"
 holland.21.a:0 "Occupy Binnenhof and defend it!"
@@ -137,19 +155,19 @@ holland.16a.a:0 "Our time is now!"
 holland.16b.t:0 "Succesfull Republican Coup"
 holland.16b.d:0 "WIP"
 holland.16b.a:0 "We have failed ourselfs."
-holland.18.t:0 "25 regenten"
-holland.18.d:0 "WIP"
-holland.18.a:0 "Our time is now!"
-holland.20.t:0 "50 regenten"
-holland.20.d:0 "WIP"
-holland.20.a:0 "Our time is now!"
+holland.18.t:0 "A Pawn In Our Game"
+holland.18.d:0 "the anarcho-liberals give us support"
+holland.18.a:0 "Behind a man's brain."
+holland.20.t:0 "Masters of War"
+holland.20.d:0 "military support"
+holland.20.a:0 "How much do I know."
 holland.22.t:0 "The Final Decision"
 holland.22.d:0 "WIP"
-holland.22.a:0 "a"
-holland.22.b:0 "b"
-holland.23.t:0 "70 regenten"
-holland.23.d:0 "WIP"
-holland.23.a:0 "Our time is now!"
+holland.22.a:0 "Allow the act to pass."
+holland.22.b:0 "Ban the vote from taking place."
+holland.23.t:0 "Amsterdam Town"
+holland.23.d:0 "rioting in amsterdam"
+holland.23.a:0 "Somebody better investigate soon."
 
 
   ##########################
@@ -157,16 +175,18 @@ holland.23.a:0 "Our time is now!"
   ##########################
 PB_HOL_colonial_influence:0 "V.O.C. Profits"
 PB_HOL_colonial_influence_desc:0 "WIP"  
+PB_HOL_coup_aftermath:0 "Aftermath of the Coup"
+PB_HOL_coup_aftermath_desc:0 "WIP"
+PB_HOL_general_strike:0 "General Strike"
+PB_HOL_general_strike_desc:0 "WIP"
 PB_HOL_road_wars:0 "The Road War"
-PB_HOL_road_wars_desc:0 "WIP"
+PB_HOL_road_wars_desc:0 "Due to the expansive and barren nature of the inner territories of New Holland, governance is sparse at best and non-existant at worst. Because of this, gangs of bandits roam the hinterlands, sometimes waging "Road Wars" against each other. It will take concerted effort to handle these bandits and end these "Road Wars" for good."
 PB_HOL_recent_unification:0 "Recent Afrikaner Unification"
-PB_HOL_recent_unification_desc:0 "WIP"
+PB_HOL_recent_unification_desc:0 "The recent unification of the Kaapkolonie and the New Republic has caused some problems in regards to governance and economics. It will take some time to sort these out."
 PB_HOL_boer_bloc:0 "The Boer Economic Bloc"
 PB_HOL_boer_bloc_desc:0 "WIP"
 PB_HOL_dualistic_system:0 "Dualistic System"
 PB_HOL_dualistic_system_desc:0 "The provinces of the Dutch Republic can be roughly categorised into two types.\n\nThe first are the “regenten” provinces, where representatives to the States General are elected by urban noblemen and merchant families. Holland is the most influential among these and is often the deciding say in who becomes State Pensionary.\n\nSecond are the “free” provinces which have public referendums to elect their representatives, although laws within these provinces may differ in who is enfranchised.\nFor most of the republic’s modern history these have been rural regions without an entrenched merchant or landowning class.\nHowever the shocking admission of Flanders as a free province in 1898 permanently upset the balance of power, and ever since the two provincial blocs have been locking horns, both vying to stymie the other’s power and impose their grand visions for the republic."
-PB_HOL_republican_agitation_1:0 "Republican Agitation - §Y(Small)§!" 
-PB_HOL_republican_agitation_1_desc:0 "With the Great War acting like a wake-up call for many Dutch citizens, the Neo-Republicans have seen their rise in popularity in their endless pursuit of confronting the old regime of Stadtholderate. Many of their members have taken to the streets in protest of the position of Stadtholder and it seems that the time is nigh for political reform in the Dutch Republic..."
 PB_HOL_colonial_empire:0 "Nederlandse Koloniale Rijk"
 PB_HOL_colonial_empire_desc:0 "The Dutch Colonial Empire has been built piece by piece by the merchants, soldiers and elite of the Dutch Republic. Over the centuries, a large, continental colonial empire has been achieved. Although it suffered losses in the Great War, especially in the East Indian region with the local uprisings, the process of rebuilding and re-consolidating Dutch control has been relatively fast due to the uniquely Dutch way of colonial expansion and administration. Our pearl necklace will continue to shine."
 PB_HOL_greenhouse_of_europe:0 "The Greenhouse of Europe"
@@ -222,7 +242,7 @@ HOL_quash_anarchists_desc:0 "WIP"
 HOL_modernise_industry:0 "Modernise the Industrial Sector"
 HOL_modernise_industry_desc:0 "WIP"
 HOL_advance_biotech:0 "Advance Bio-Tech Research"
-HOL_advance_biotech_desc:0 "WIP"
+HOL_advance_biotech_desc:0 "The Netherlands is at the forefront of bio-tech research across the world. We should move to maintain our cutting edge by funding advancements in these fields of research."
 HOL_edison_philips_partnership:0 "The Edison-Philips Partnership"
 HOL_edison_philips_partnership_desc:0 "WIP"
 #colonial tree
@@ -243,12 +263,12 @@ HOL_indonesian_question_desc:0 "WIP"
 HOL_rotterdam_hub:0 "The Rotterdam Trade Hub"
 HOL_rotterdam_hub_desc:0 "WIP"
 HOL_end_road_wars:0 "End the Road Wars"
-HOL_end_road_wars_desc:0 "WIP"
+HOL_end_road_wars_desc:0 "We must turn our attention and efforts to the outback of New Holland where, for the longest time, we have allowed bandits to roam without interruption. We must end them and their gang-related conflicts once and for all."
 HOL_empire_conscription:0 "Expand Conscription Across the Empire"
 HOL_empire_conscription_desc:0 "WIP"
 HOL_afrikaner_industry:0 "Incentivise Afrikaner Industrialisation"
 HOL_afrikaner_industry_desc:0 "WIP"
-HOL_free_hand_for_biet:0 "A Free Hand for Biet"
+HOL_free_hand_for_biet:0 "A Free Hand for Beit"
 HOL_free_hand_for_biet_desc:0 "WIP"
 HOL_oil_reserves:0 "Search for New Oil Reserves"
 HOL_oil_reserves_desc:0 "WIP"
