Quality of Life Changes

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -403,6 +403,7 @@ PB_AME_The_American_Marine_Corps_tt:0 "\nThe §HAmerican Marines§! tech will pr
 # DYNAMIC MODIFIERS
 ##########################
 PB_EIEC_Influence_Modifier:0 "Edison Electric Influence"
+PB_EIEC_Influence_Modifier_desc:0 "Cant oyu have ass"
 
 AME_EIEC_increase_EIEC_Influence_tt:0 "\n§YThis will increase the influence of the Edison Electric Company in the government.§!\n\n"
 AME_EIEC_decrease_EIEC_Influence_tt:0 "\n§YThis will decrease the influence of the Edison Electric Company in the government.§!\n\n"
