--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -611,6 +611,8 @@
  VICTORY_POINTS_12586:0 "Omaha"
  VICTORY_POINTS_12641:0 "Chita"
  VICTORY_POINTS_12735:0 "Birmingham"
+ VICTORY_POINTS_492:0 "New Philadelphia"
+ VICTORY_POINTS_1453:0 "Baton Rouge"
  VICTORY_POINTS_12782:0 "San Antonio"
  VICTORY_POINTS_13090:0 "Unarasuka"
  VICTORY_POINTS_13091:0 "Novo-Odessa"
