--- a/localisation/english/PB_Holland_l_english.yml
+++ b/localisation/english/PB_Holland_l_english.yml
@@ -43,7 +43,7 @@ HOL_regenten_side_medium_control_range:0 "Medium Regenten Majority"
 HOL_regenten_side_mid_high_control_range:0 "Medium High Regenten Majority"
 HOL_regenten_side_high_control_range:0 "High Regenten Majority"
 HOL_regenten_side_total_control_range:0 "Regenten Majority"
-#decisions
+#decisions bop
 PB_HOL_regenten_support:0 "Increase Regenten Support"
 PB_HOL_raid_dissident_hostpots:0 "Raid Dissident Hotspots"
 PB_HOL_militarise_police_forces:0 "Militarise Police Forces"
@@ -168,6 +168,19 @@ holland.22.b:0 "Ban the vote from taking place."
 holland.23.t:0 "Amsterdam Town"
 holland.23.d:0 "rioting in amsterdam"
 holland.23.a:0 "Somebody better investigate soon."
+#capitulation
+holland.1c.t:0 "The Loss Of The Mainland"
+holland.1c.d:0 "WIP"
+holland.1c.a:0 "a"
+holland.25.t:0 "Occupation of Dutch Colonies"
+holland.25.d:0 "WIP"
+holland.25.a:0 "It's free real estate."
+holland.26.t:0 "The Colonies Break Away"
+holland.26.d:0 "WIP"
+holland.26.a:0 "A loss to our empire!"
+holland.27.t:0 "The Exile Government"
+holland.27.d:0 "WIP"
+holland.27.a:0 "Changes must happen!"
 
 
   ##########################
