--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -4386,11 +4386,14 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   FIN_Uprising_ds_ADJ:0 "Finnish"
   FIN_Uprising_cn_ADJ:0 "Finnish"
   FIN_Uprising_an_ADJ:0 "Finnish"
+  
+  PRE_FREE:0 "Suid-Afrika"
+  PRE_FREE_DEF:0 "Suid-Afrika"
+  PRE_FREE_ADJ:0 "Suid-Afrikaans"
 
   PRE_UNI_ds:0 "Afikaner Federation"
   PRE_UNI_ds_DEF:0 "The Afikaner Federation"
   PRE_UNI_ds_ADJ:0 "Afrikaner"
-  
 
   FIN_Uprising_Jacobin_ni:0 "Forces for Greater Finland"
   FIN_Uprising_Jacobin_ni_DEF:0 "The Forces for Greater Finland"
