Removing Coalition Ideas Effects (various reasons)

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -613,6 +613,7 @@
  VICTORY_POINTS_12735:0 "Birmingham"
  VICTORY_POINTS_492:0 "New Philadelphia"
  VICTORY_POINTS_1453:0 "Baton Rouge"
+ VICTORY_POINTS_12498:0 "New Liverpool"
  VICTORY_POINTS_12782:0 "San Antonio"
  VICTORY_POINTS_13090:0 "Unarasuka"
  VICTORY_POINTS_13091:0 "Novo-Odessa"
