--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -403,7 +403,7 @@ PB_AME_The_American_Marine_Corps_tt:0 "\nThe §HAmerican Marines§! tech will pr
 # DYNAMIC MODIFIERS
 ##########################
 PB_EIEC_Influence_Modifier:0 "Edison Electric Influence"
-PB_EIEC_Influence_Modifier_desc:0 "Cant oyu have ass"
+PB_EIEC_Influence_Modifier_desc:0 "The EIEC is the lifeblood of the American Industrial Miracle. As the biggest Megacorporations on the world it wields influence and power like no other company on the world. Despite being founded in Britian its seat of power and main interests are increasingly moving to the United Commenwealth. The vast lands and people of the Commenwealth offer far more Expansion potential. The parties and polticians of the UC have almost all become entangled in webs of the EIEC, giving her frightening influence over the decision making in Philadelphia."
 
 AME_EIEC_increase_EIEC_Influence_tt:0 "\n§YThis will increase the influence of the Edison Electric Company in the government.§!\n\n"
 AME_EIEC_decrease_EIEC_Influence_tt:0 "\n§YThis will decrease the influence of the Edison Electric Company in the government.§!\n\n"
