Reworked Eyes to the South Branch

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -443,8 +443,8 @@
   AME_cn_party_long:0 "Federal Unionist Party"
   AME_rc_party:0 "Social Credit"
   AME_rc_party_long:0 "Social Credit Party"
-  AME_an_party:0 "Edison Electric Lobbyists"
-  AME_an_party_long:0 "Edison Electric Lobby"
+  AME_an_party:0 "Edison Electric Lobby"
+  AME_an_party_long:0 "Edison Electric Lobbyists"
   AME_ds_party:0 "NRF"
   AME_ds_party_long:0 "National Reorganization Front"
   AME_ni_party:0 "CCP"
