--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8295,30 +8295,30 @@ SAN_an_ADJ:0 "Indian"
  GLF_an_ADJ:0 "German"
 
 
- FNE_ni:0 "Dietland"
- FNE_ni_DEF:0 "the French Department of Dietland"
- FNE_ds:0 "Dietland"
- FNE_ds_DEF:0 "the Dietland"
- FNE_rc:0 "Dietland"
- FNE_rc_DEF:0 "the Dietland"
- FNE_an:0 "Dietland"
- FNE_an_DEF:0 "the Dietland"
- FNE_cn:0 "Dietland"
- FNE_cn_DEF:0 "the Dietland"
- FNE_lb:0 "Dietland"
- FNE_lb_DEF:0 "the Dietland"
- FNE_ss:0 "Dietland"
- FNE_ss_DEF:0 "the Dietland"
- FNE_jc:0 "Dietland"
- FNE_jc_DEF:0 "the Dietland"
- FNE_ni_ADJ:0 "Diets"
- FNE_rc_ADJ:0 "Diets"
- FNE_lb_ADJ:0 "Diets"
- FNE_ss_ADJ:0 "Diets"
- FNE_jc_ADJ:0 "Diets"
- FNE_ds_ADJ:0 "Diets"
- FNE_cn_ADJ:0 "Diets"
- FNE_an_ADJ:0 "Diets"
+ FNE_ni:0 "Dutch Occupation Government"
+ FNE_ni_DEF:0 "the Dutch Occupation Government"
+ FNE_ds:0 "Dutch Occupation Government"
+ FNE_ds_DEF:0 "the Dutch Occupation Government"
+ FNE_rc:0 "Dutch Occupation Government"
+ FNE_rc_DEF:0 "the Dutch Occupation Government"
+ FNE_an:0 "Dutch Occupation Government"
+ FNE_an_DEF:0 "the Dutch Occupation Government"
+ FNE_cn:0 "Dutch Occupation Government"
+ FNE_cn_DEF:0 "the Dutch Occupation Government"
+ FNE_lb:0 "Dutch Occupation Government"
+ FNE_lb_DEF:0 "the Dutch Occupation Government"
+ FNE_ss:0 "Dutch Occupation Government"
+ FNE_ss_DEF:0 "the Dutch Occupation Government"
+ FNE_jc:0 "Dutch Occupation Government"
+ FNE_jc_DEF:0 "the Dutch Occupation Government"
+ FNE_ni_ADJ:0 "Dutch"
+ FNE_rc_ADJ:0 "Dutch"
+ FNE_lb_ADJ:0 "Dutch"
+ FNE_ss_ADJ:0 "Dutch"
+ FNE_jc_ADJ:0 "Dutch"
+ FNE_ds_ADJ:0 "Dutch"
+ FNE_cn_ADJ:0 "Dutch"
+ FNE_an_ADJ:0 "Dutch"
 
  PON_ni:0 "Pontic Empire"
  PON_ni_DEF:0 "the Pontic Empire"
