A LOT of Work for the Lang Branch :D

--- a/localisation/english/PB_Cities_l_english.yml
+++ b/localisation/english/PB_Cities_l_english.yml
@@ -19,7 +19,7 @@ VICTORY_POINTS_9833:0 "Constantinople"
 # American Commonwealth 
 ############
 
-VICTORY_POINTS_11782:0 "Edsion"
+VICTORY_POINTS_11782:0 "Edison"
 VICTORY_POINTS_9801:0 "Albertia"
 VICTORY_POINTS_6929:0 "Frederick"
 VICTORY_POINTS_9847:0 "Norwalk"
