--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -24,11 +24,17 @@ PB_Cultures_add_Dixie:0 "§YOld Dixie§! will §G be considered§! as an accepte
 
 PB_Dixie_No_Cores_Resistance:0 "§RCores on all Old Dixie States will be lost and mass resistance begins!§!"
 
+PB_Dixie_No_Cores_Resistance_Half:0 "§RCores on all Old Dixie States will be lost and organized resistance forms!§!"
+
 PB_Dixie_States_Resistance:0 "Every Old Dixie State gains §RDixie Unrest§!"
 
 AME_Freedman_Support_US_tt:0 "Freedman Militas §Gwill rise up against the South§! in case of another Dixie Rebellion"
 
 AME_Bleeding_South_disabled_tt:0 "§GThe Rebellion has been prevented§! - The Bleeding South will not be active anymore"
+
+AME_Lang_Corrupt_Decisions:0 "£decision_icon_small §YDecisions to sway Southern Politicans back to our side will be unlocked§!"
+
+AME_Lang_Corrupt_Decisions_2:0 "£decision_icon_small §YDecisions for offering economic favors in exchange  of loyalty will be unlocked§!"
 
 ImpManagement_Acd_80_tt:0 "Acadian Alignment is greater then §b80%§!"
 
@@ -148,6 +154,8 @@ PB_AME_Orbit_Wars_Research_Roulette:0 "Conduct Orbital Experiments"
 PB_NIC_Re_Occupied_TooltipL:0 "§YNicaragua has been re-invaded and occupied§!"
 
 PB_AME_The_Bleeding_South_flag_TT:0 "§YThe South is gearing up for open rebellion.§!"
+
+PB_AME_The_Bleeding_South_lang_flag:0 "§YThe South is gearing up for open rebellion.§!"
 
 ##########################
 # COSMETIC TAG
@@ -347,9 +355,11 @@ PB_AME_Army_Broken_Split_FSA:0 "Army in Dissarray"
 
 PB_AME_Southern_Reperations:0 "Dixie Reperations"
 
-AME_Dixie_War_HAS_Begun:0 "The South has risen up"
+AME_Dixie_War_HAS_Begun:0 "§RThe South has risen up§!"
 
-AME_Dixie_War_Defeated:0 "The Dixie Uprising has been crushed"
+AME_Dixie_War_Defeated:0 "The §BDixie Uprising§! has been §Rcrushed§!"
+
+AME_Dixie_Uprising_Prevented_tt:0 "The §RDixie Conspriacy§! has been §Gdestroyed§!"
 
 PB_AME_Quebec_Bailout_Money:0 "American Sponsored Bailout"
 
@@ -827,6 +837,17 @@ PB_AME_Sign_the_Black_Budget:0 "Sign the Black Budget"
 PB_AME_Sign_the_Black_Budget_desc:0 "The Bureau of Technology and Science can be afforded some excess materials under the table in order to develop technologies that might be seen as ethically dubious by the public."
 PB_AME_Form_the_Trinity_Committee:0 "Form the Trinity Committee" 
 PB_AME_Form_the_Trinity_Committee_desc:0 "The Workman's Party has allowed the Bureau of Technology and Science to establish a committee to explore the potential applications of atomic energy. This committee, known as the Trinity Committee, has been given the resources and authority to conduct research and experiments in the field of atomic energy. Behind closed doors, however, the true intent of the committee is to develop methods and systems for eventual atomic weaponry."
+PB_AME_No_War_Against_the_South:0 "The Southern Gambit"
+
+PB_AME_Paved_Seduction:0 "Paved Roads in the South - For Free!"
+
+PB_AME_Flexible_Stateman:0 "A Speech a day keeps the ... away"
+
+PB_AME_The_Corrupt_Scheme:0 "A Favor for a Favor"
+
+PB_AME_Our_Carrots:0 "Danglin Our Carrots"
+
+PB_AME_Ending_Crittenden_Lang:0 "Ending Crittenden"
 
 PB_AME_Alternative_for_Social_America:0 "The Alternative for Social America"
 PB_AME_Alternative_for_Social_America_desc:0 "The Social Credit party wins the election, gaining a majority of seats in the legislative body. The election results are met with excitement and celebration among party supporters, as well as concern and criticism from opponents. The newly elected officials begin their term with promises to implement their platform of economic and social reform, and work to fulfill their campaign promises."
@@ -1956,6 +1977,8 @@ AME_NIC_America_Wins_lol:0 "§YWith both major insurgencies crushed without comp
 
 AME_Spacing_tt:0 "  \n"
 
+AME_Spacing_trigger_tt:0 "  \n"
+
 PB_Coloured_Brigade_Program_tt:0 "§YWe will gain three Special Colored Regiment divisions from the Freedmen Provinces§!"
 
 AME_Megacorp_Options_Available:0 "The §YImperial Business Machines§! Company will be available to contract as a §YTechnical Team§!\n\n"
@@ -2188,11 +2211,31 @@ PB_AME_A_Very_American_Kind_of_Crisis_tt:0 "\n£GFX_territory_icon  Regional Sta
 
 # Decisions
 PB_AME_The_Bleeding_South:0 "The Bleeding South"
-PB_AME_The_Bleeding_South_desc:0 "\n\n\n\n\n\nRacial tensions in the Southern states have always been uneasy. Creating not only a physical divide between north and south but a political one as well T North is seen by much of the world as a bastion of democracy, freedom, and progress and the South as a rural backwater with rather outdated and barbaric traditions and customs. This rivalry has eventually reached its boiling point and there is now word of a southern uprising. We must act quick on this issue else we face hell on earth.\n\n§RWe have limited time to prepare for what’s coming.§!"
+PB_AME_The_Bleeding_South_desc:0 "\n\n\n\n\n\nRacial tensions in the Southern states have always been uneasy. Creating not only a physical divide between north and south but a political one as well. The North is seen by much of the world as a bastion of democracy, freedom, and progress and the South as a rural backwater with rather outdated and barbaric traditions and customs.\n\nThis conflict is best symbolized by the Crittenden Compromise, which has given Southern Provinces the power to act in their own liking in the segregation issue. However the Compromise has been more and more used by the South to limit their participation in the Commenwealth especially regarding Conscriptiion.\n\nThe current administration has come to the conclusion that the time has come to abolish the Compromise. But it seems like this rivalry has eventually reached its boiling point and whispers are floating around of another Southern Uprising. The conspirators in the South are gathering their strength we can not sit idle.\n\n§RAct carefully, intelligent or use fists. Decide how to deal with these traitors.§!"
 AME_Southern_Rebellion:0 "Southern Rebellion"
 AME_Southern_Rebellion_desc:0 "For far too long we have been ignored by the suits in Philadelphia. They openly spit on our faces and insult us whenver they very damn well please but we have had enough of it. No longer will our traditions, morals, and beliefs be hampered on by an administration so folly. So I call you brothers, rise, rise, rise up into Dixie Land!\n\n§RAnd End This Charade Once And For All!§!"
 AME_Civil_Unrest:0 "Civil Unrest"
 AME_Civil_Unrest_desc:0 "It is only time until we see the south proclaim independence but while the clock ticks down we have other pressing matters to attend to. Riots, corruption, and racial tensions are all being birthed in this moment of strife. We must, at the very least, attempt to control the situation else face intervention from our fathers in Britain."
+
+AME_Southern_Rebellion_Lang:0 "Southern Rebellion"
+AME_Southern_Rebellion_Lang_desc:0 "For far too long we have been ignored by the suits in Philadelphia. They openly spit on our faces and insult us whenver they very damn well please but we have had enough of it. No longer will our traditions, morals, and beliefs be hampered on by an administration so folly. So I call you brothers, rise, rise, rise up into Dixie Land!\n\n§RAnd End This Charade Once And For All!§!"
+AME_Civil_Unrest_Lang:0 "Civil Unrest"
+AME_Civil_Unrest_Lang_desc:0 "It is only time until we see the south proclaim independence but while the clock ticks down we have other pressing matters to attend to. Riots, corruption, and racial tensions are all being birthed in this moment of strife. We must, at the very least, attempt to control the situation else face intervention from our fathers in Britain."
+
+AME_Bribe_Dixie_Governors_Lang:0 "Bribing Old Dixie Governors"
+AME_Bribe_Dixie_Governors_Lang_desc:0 "He says he'll play ball if we pay for some, I know this sounds odd, some surgeries...that he wants, Augmentaion surgeries. He says he'll sit on everything. - How much? - There are several procedures and altogether they cost ...  - Pay it. - Yes, sir. Okay. Yeah."
+
+AME_Fund_Freemen_Workers:0 "Fund Freedmen Trade Unions"
+
+AME_Hollywood_Florida_Deal:0 "Subzidize Seminole Hollywood Area"
+
+AME_Rebuild_Dockyards_South:0 "Restore Southern Dockyard Industry"
+
+AME_Restore_Atlanta_to_Greatness:0 "Rebuild the Atlanta Area to Old Greatness"
+
+AME_Blackmail_Dixie_Mayors_Lang:0 "Blackmail Old Dixie Mayors"
+AME_Blackmail_Dixie_Mayors_Lang_desc:0 "Please quiet down - I need this job!"
+
 AME_Increase_Comp_Virginia:0 "Increase Compliance In Virginia"
 AME_Increase_Comp_Albemarle:0 "Increase Compliance In Albemarle"
 AME_Increase_Comp_Claredon:0 "Increase Compliance In Claredon"
@@ -2203,6 +2246,8 @@ AME_Increase_Comp_Taliaferro:0 "Increase Compliance In Taliaferro"
 AME_Increase_Comp_Bailey:0 "Increase Compliance In Bailey"
 AME_Stall_for_Time_BS:0 "Stall for Time"
 AME_Crush_Before_it_Begins:0 "Crush the Uprising before it begins"
+AME_Crush_Conspiracy:0 "End the Conspiracy"
+AME_Crush_Conspiracy_desc:0 "Lang is increasingly worried about the reports coming from the South. Armed militias and terroist groups are arming themself for a potential uprising. But every movement has its heads and organizers. Its clear that several Southern Politicians are secretely supporting this endeavour. Rather then focus on an Anti-Terror campaign, Lang has decided that he will try to sway several politicans and potentially entire Southern Governors with several schemes. In so he hopes he can prevent the conspiracy to gather strength in enough time and gain intel on its main perpetrators."
 AME_Install_Blockade:0 "Begin an arms blockade around the South"
 AME_Install_Blockade_desc:0 "We have to make sure that no other foreign power supports the traitors in the South, a blockade must be established even if will cause many to switch sides."
 AME_Anti_Dixie_Campaign:0 "Promote Anti-Dixie Campaigns"
@@ -2219,6 +2264,8 @@ PB_Idea_FSA_War_of_Independence:0 "War against Tyranny"
 # Country Flags
 Bleeding_South_Disabled:0 "The Bleeding South Is Not Active"
 Bleeding_South_Enabled:0 "The Bleeding South Is Active"
+
+
 
 # Tooltips
 Bleeding_South1tooltip:0 "God Help Us All"
