--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -665,7 +665,7 @@
  STATE_664:0 "Kaschau"
  STATE_665:0 "Gabes"
  STATE_666:0 "Lappland"
- STATE_667:0 "Lesser Sunda Islands"
+ STATE_667:0 "East Nusa Tenggara"
  STATE_668:0 "The Moluccas"
  STATE_669:1 "Northern Papua"
  STATE_670:0 "Laos"
@@ -959,3 +959,5 @@
  STATE_971:0 "Burgenland"
  STATE_972:0 "Nanjing"
  STATE_973:0 "Southern Jiangsu"
+ STATE_974:0 "West Nusa Tenggara"
+ STATE_975:0 "Sint Maarten"
