EIEC grows and grows

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -415,48 +415,49 @@ PB_AME_The_American_Marine_Corps_tt:0 "\nThe §HAmerican Marines§! tech will pr
 PB_EIEC_Influence_Modifier:0 "Edison Electric Influence"
 PB_EIEC_Influence_Modifier_desc:0 "The EIEC is the lifeblood of the American Industrial Miracle. As the biggest Megacorporations on the world it wields influence and power like no other company on the world. Despite being founded in Britian its seat of power and main interests are increasingly moving to the United Commenwealth. The vast lands and people of the Commenwealth offer far more Expansion potential. The parties and polticians of the UC have almost all become entangled in webs of the EIEC, giving her frightening influence over the decision making in Philadelphia."
 
-AME_EIEC_increase_EIEC_Influence_tt:0 "\n§YThis will increase the influence of the Edison Electric Company in the government.§!\n\n"
-AME_EIEC_decrease_EIEC_Influence_tt:0 "\n§YThis will decrease the influence of the Edison Electric Company in the government.§!\n\n"
+AME_EIEC_increase_EIEC_Influence_tt:0 "This will §Rincrease§! the  £GFX_pol_power  §YPolitical Influence§! of the  £GFX_EIEC  in the Government.\n\n"
+AME_EIEC_decrease_EIEC_Influence_tt:0 "This will §Gdecrease§! the  £GFX_pol_power  §YPolitical Influence§! of the  £GFX_EIEC  in the Government.\n\n"
 
-AME_EIEC_increase_research_speed_low_tt:0 "§GIncreases§! §Yresearch speed§! by §Y2%§!.\n\n"
-AME_EIEC_increase_research_speed_med_tt:0 "§GIncreases§! §Yresearch speed§! by §Y4%§!.\n\n"
-AME_EIEC_increase_research_speed_high_tt:0 "§GIncreases§! §Yresearch speed§! by §Y6%§!.\n\n"
+AME_EIEC_increase_research_speed_low_tt:0 "§GIncreases§! £GFX_EIEC   £GFX_research_icon  §YResearch speed§! by §Y2%§!.\n\n"
+AME_EIEC_increase_research_speed_med_tt:0 "§GIncreases§! £GFX_EIEC   £GFX_research_icon  §YResearch speed§! by §Y4%§!.\n\n"
+AME_EIEC_increase_research_speed_high_tt:0 "§GIncreases§! £GFX_EIEC   £GFX_research_icon  §YResearch speed§! by §Y6%§!.\n\n"
 
-AME_EIEC_decrease_research_speed_low_tt:0 "§RDecreases§! §Yresearch speed§! by §Y2%§!.\n\n"
-AME_EIEC_decrease_research_speed_med_tt:0 "§RDecreases§! §Yresearch speed§! by §Y4%§!.\n\n"
-AME_EIEC_decrease_research_speed_high_tt:0 "§RDecreases§! §Yresearch speed§! by §Y6%§!.\n\n"
+AME_EIEC_decrease_research_speed_low_tt:0 "§RDecreases§! £GFX_EIEC   £GFX_research_icon  §YResearch speed§! by §Y2%§!.\n\n"
+AME_EIEC_decrease_research_speed_med_tt:0 "§RDecreases§! £GFX_EIEC   £GFX_research_icon  §YResearch speed§! by §Y4%§!.\n\n"
+AME_EIEC_decrease_research_speed_high_tt:0 "§RDecreases§! £GFX_EIEC   £GFX_research_icon  §YResearch speed§! by §Y6%§!.\n\n"
 
-AME_EIEC_increase_maximum_production_efficiency_low_tt:0 "§GIncreases§! §Ymaximum production efficiency§! by §Y5%§!.\n\n"
-AME_EIEC_increase_maximum_production_efficiency_med_tt:0 "§GIncreases§! §Ymaximum production efficiency§! by §Y10%§!.\n\n"
-AME_EIEC_increase_maximum_production_efficiency_high_tt:0 "§GIncreases§! §Ymaximum production efficiency§! by §Y15%§!.\n\n"
+AME_EIEC_increase_maximum_production_efficiency_low_tt:0 "§GIncreases§! £GFX_EIEC   £prod_eff_cap  §YProduction Efficieny Cap§! by §Y5%§!.\n\n"
+AME_EIEC_increase_maximum_production_efficiency_med_tt:0 "§GIncreases§! £GFX_EIEC   £prod_eff_cap  §YProduction Efficieny Cap§! by §Y10%§!.\n\n"
+AME_EIEC_increase_maximum_production_efficiency_high_tt:0 "§GIncreases§! £GFX_EIEC   £prod_eff_cap  §YProduction Efficieny Cap§! by §Y15%§!.\n\n"
 
-AME_EIEC_decrease_maximum_production_efficiency_low_tt:0 "§RDecreases§! §Ymaximum production efficiency§! by §Y5%§!.\n\n"
-AME_EIEC_decrease_maximum_production_efficiency_med_tt:0 "§RDecreases§! §Ymaximum production efficiency§! by §Y10%§!.\n\n"
-AME_EIEC_decrease_maximum_production_efficiency_high_tt:0 "§RDecreases§! §Ymaximum production efficiency§! by §Y15%§!.\n\n"
+AME_EIEC_decrease_maximum_production_efficiency_low_tt:0 "§RDecreases§! £GFX_EIEC   £prod_eff_cap  §YProduction Efficieny Cap§! by §Y5%§!.\n\n"
+AME_EIEC_decrease_maximum_production_efficiency_med_tt:0 "§RDecreases§! £GFX_EIEC   £prod_eff_cap  §YProduction Efficieny Cap§! by §Y10%§!.\n\n"
+AME_EIEC_decrease_maximum_production_efficiency_high_tt:0 "§RDecreases§! £GFX_EIEC   £prod_eff_cap  §YProduction Efficieny Cap§! by §Y15%§!.\n\n"
 
-AME_EIEC_increase_production_factory_efficiency_gain_low_tt:0 "§GIncreases§! §Yproduction efficiency gain§! by §Y5%§!.\n\n"
-AME_EIEC_increase_production_factory_efficiency_gain_med_tt:0 "§GIncreases§! §Yproduction efficiency gain§! by §Y10%§!.\n\n"
-AME_EIEC_increase_production_factory_efficiency_gain_high_tt:0 "§GIncreases§! §Yproduction efficiency gain§! by §Y15%§!.\n\n"
+AME_EIEC_increase_production_factory_efficiency_gain_low_tt:0 "§GIncreases§! £GFX_EIEC   £prod_eff  §YProduction Efficiency Growth§! by §Y5%§!.\n\n"
+AME_EIEC_increase_production_factory_efficiency_gain_med_tt:0 "§GIncreases§! £GFX_EIEC   £prod_eff  §YProduction Efficiency Growth§! by §Y10%§!.\n\n"
+AME_EIEC_increase_production_factory_efficiency_gain_high_tt:0 "§GIncreases§! £GFX_EIEC   £prod_eff  §Yproduction Efficiency Growth§! by §Y15%§!.\n\n"
 
-AME_EIEC_decrease_production_factory_efficiency_gain_low_tt:0 "§RDecreases§! §Yproduction efficiency gain§! by §Y5%§!.\n"
-AME_EIEC_decrease_production_factory_efficiency_gain_med_tt:0 "§RDecreases§! §Yproduction efficiency gain§! by §Y10%§!.\n\n"
-AME_EIEC_decrease_production_factory_efficiency_gain_high_tt:0 "§RDecreases§! §Yproduction efficiency gain§! by §Y15%§!.\n\n"
+AME_EIEC_decrease_production_factory_efficiency_gain_low_tt:0 "§RDecreases§! £GFX_EIEC   £prod_eff  §YProduction Efficiency Growth§! by §Y5%§!.\n"
+AME_EIEC_decrease_production_factory_efficiency_gain_med_tt:0 "§RDecreases§! £GFX_EIEC   £prod_eff  §YProduction Efficiency Growth§! by §Y10%§!.\n\n"
+AME_EIEC_decrease_production_factory_efficiency_gain_high_tt:0 "§RDecreases§! £GFX_EIEC   £prod_eff  §YProduction Efficiency Growth§! by §Y15%§!.\n\n"
 
-AME_EIEC_increase_line_change_production_efficiency_gain_low_tt:0 "§GIncreases§! §Yline change efficiency§! by §Y5%§!.\n\n"
-AME_EIEC_increase_line_change_production_efficiency_gain_med_tt:0 "§GIncreases§! §Yline change efficiency§! by §Y10%§!.\n\n"
-AME_EIEC_increase_line_change_production_efficiency_gain_high_tt:0 "§GIncreases§! §Yline change efficiency§! by §Y15%§!.\n\n"
 
-AME_EIEC_decrease_line_change_production_efficiency_gain_low_tt:0 "§RDecreases§! §Yline change efficiency§! by §Y5%§!.\n\n"
-AME_EIEC_decrease_line_change_production_efficiency_gain_med_tt:0 "§RDecreases§! §Yline change efficiency§! by §Y10%§!.\n\n"
-AME_EIEC_decrease_line_change_production_efficiency_gain_high_tt:0 "§RDecreases§! §Yline change efficiency§! by §Y15%§!.\n\n"
+AME_EIEC_increase_line_change_production_efficiency_gain_low_tt:0 "§GIncreases§! £GFX_EIEC   £GFX_production_efficiency_loss_icon  §YProduction Efficieny Rentention§! by §Y5%§!.\n\n"
+AME_EIEC_increase_line_change_production_efficiency_gain_med_tt:0 "§GIncreases§! £GFX_EIEC  £GFX_production_efficiency_loss_icon  §YProduction Efficieny Rentention§! by §Y10%§!.\n\n"
+AME_EIEC_increase_line_change_production_efficiency_gain_high_tt:0 "§GIncreases§! £GFX_EIEC   £GFX_production_efficiency_loss_icon  §YProduction Efficieny Rentention§! by §Y15%§!.\n\n"
 
-AME_EIEC_increase_industrial_capacity_factory_gain_low_tt:0 "§GIncreases§! §Yindustrial capacity§! by §Y5%§!.\n\n"
-AME_EIEC_increase_industrial_capacity_factory_gain_med_tt:0 "§GIncreases§! §Yindustrial capacity§! by §Y10%§!.\n\n"
-AME_EIEC_increase_industrial_capacity_factory_gain_high_tt:0 "§GIncreases§! §Yindustrial capacity§! by §Y15%§!.\n\n"
+AME_EIEC_decrease_line_change_production_efficiency_gain_low_tt:0 "§RDecreases§! £GFX_EIEC   £GFX_production_efficiency_loss_icon  §YProduction Efficieny Rentention§! by §Y5%§!.\n\n"
+AME_EIEC_decrease_line_change_production_efficiency_gain_med_tt:0 "§RDecreases§! £GFX_EIEC   £GFX_production_efficiency_loss_icon  §YProduction Efficieny Rentention§! by §Y10%§!.\n\n"
+AME_EIEC_decrease_line_change_production_efficiency_gain_high_tt:0 "§RDecreases§! £GFX_EIEC   £GFX_production_efficiency_loss_icon  §YProduction Efficieny Rentention§! by §Y15%§!.\n\n"
 
-AME_EIEC_decrease_industrial_capacity_factory_gain_low_tt:0 "§RDecreases§! §Yindustrial capacity§! by §Y5%§!.\n\n"
-AME_EIEC_decrease_industrial_capacity_factory_gain_med_tt:0 "§RDecreases§! §Yindustrial capacity§! by §Y10%§!.\n\n"
-AME_EIEC_decrease_industrial_capacity_factory_gain_high_tt:0 "§RDecreases§! §Yindustrial capacity§! by §Y15%§!.\n\n"
+AME_EIEC_increase_industrial_capacity_factory_gain_low_tt:0 "§GIncreases§! £GFX_EIEC   £GFX_mil_factory  §YFactory Output§! by §Y5%§!.\n\n"
+AME_EIEC_increase_industrial_capacity_factory_gain_med_tt:0 "§GIncreases§! £GFX_EIEC   £GFX_mil_factory  §YFactory Output§! by §Y10%§!.\n\n"
+AME_EIEC_increase_industrial_capacity_factory_gain_high_tt:0 "§GIncreases§! £GFX_EIEC   £GFX_mil_factory  §YFactory Output§! by §Y15%§!.\n\n"
+
+AME_EIEC_decrease_industrial_capacity_factory_gain_low_tt:0 "§RDecreases§! £GFX_EIEC   £GFX_mil_factory  §YFactory Output§! by §Y5%§!.\n\n"
+AME_EIEC_decrease_industrial_capacity_factory_gain_med_tt:0 "§RDecreases§! £GFX_EIEC   £GFX_mil_factory  §YFactory Output§! by §Y10%§!.\n\n"
+AME_EIEC_decrease_industrial_capacity_factory_gain_high_tt:0 "§RDecreases§! £GFX_EIEC   £GFX_mil_factory  §YFactory Output§! by §Y15%§!.\n\n"
 
 
 PB_AME_Trade_Union:0 "Trade Union Support"
@@ -724,12 +725,14 @@ PB_AME_Revive_The_Steel_Belt:0 "Revive The Steel Belt"
 PB_AME_Revive_The_Steel_Belt_desc:0 "In recent years, there has been a concerted effort to revitalize the steel belt by redeveloping former industrial sites, promoting new business investment, and creating job opportunities. The redevelopment efforts aim to create a modern, diversified economy that can sustain the region's future growth and prosperity. With the renewed focus on innovation, entrepreneurship, and technology, the steel belt is poised for a new era of success."
 PB_AME_Fair_Pay_For_Fair_Work:0 "Fair Pay For Fair Work"
 PB_AME_Fair_Pay_For_Fair_Work_desc:0 "In the pursuit of economic equality and social justice, policymakers have long sought ways to ensure that workers receive fair compensation for their labor. One strategy that has gained traction is the establishment of a fair wage policy. This policy aims to guarantee that workers are paid a living wage that covers the basic needs of a family, such as food, housing, healthcare, and education."
-PB_AME_Crush_Corporate_America:0 "Crush Corporate America"
+PB_AME_Crush_Corporate_America:0 "Renegotiate Terms with the Megacorps"
 PB_AME_Crush_Corporate_America_desc:0 "As the power and wealth of large corporations continue to grow, many Americans are becoming increasingly concerned about the concentration of economic power and the threat it poses to democracy. In response, a movement has emerged to fight corporate oligarchy and promote greater economic justice. This movement seeks to hold corporations accountable for their actions, promote worker rights and unionization, and advocate for policies that benefit the majority of Americans, rather than just a small elite."
 PB_AME_Renovate_The_Eastern_Seaboard:0 "Renovate The Eastern Seaboard"
 PB_AME_Renovate_The_Eastern_Seaboard_desc:0 "The East Coast of America has always been a hub of economic activity, but recent efforts have focused on expanding industry in the region. From the bustling cities of New York and Boston to the smaller towns along the coast, new factories and manufacturing centers are popping up all over. These efforts are aimed at creating more jobs for workers and providing a boost to the local economy. The construction of new infrastructure such as highways, bridges, and rail lines is also underway, helping to connect the East Coast with other parts of the country and facilitate the movement of goods and people"
 PB_AME_Black_Steel:0 "The Best Black Steel"
 PB_AME_Black_Steel_desc:0 "Other nations in the world might produce more oil then we do but no other nation in the world has our quality. Our refineries produce the most high quality fuel in the world which is highly sought after by the best industries."
+PB_AME_Automat_Quota:0 "The Automation Quota"
+PB_AME_Automat_Quota_desc:0 "One of biggest election promises of the Progress Party under Curtin was the implemtation of an Automation Quota in the workspace. The Quota will restrict the amount of Automatics to a certain percentages of workers in the workspace making cases of mass layoffs due to new advanced automatics impossible. Though the planning has experienced some hiccups as several expections regarding different states, companies or activities had to be made. Especially the EIEC has been trying to prevent the passing of the Quota."
 PB_AME_Fair_Education_Act:0 "Fair Education Act"
 PB_AME_Fair_Education_Act_desc:0 "The United Commonwealth is committed to promoting education and research in its universities, recognizing that an educated populace is crucial to the growth and success of the nation. To achieve this goal, the government has increased research funding for universities and provided greater support for literacy programs."
 PB_AME_Bright_Minds_For_A_Bright_America:0 "Bright Minds For A Bright Future"
@@ -1283,7 +1286,7 @@ AME_the_aberhard_administration_desc:0 ""
 
 Unicom.1.t:0 "The Automation Crisis hits America"
 Unicom.1.d:0 "The Automation Crisis, which began in the United Kingdom, has spread to the rest of the Empire, hitting the Commonwealth particularly hard due to our reliance on the EIEC’s economic investments. Over a million people have almost instantly been put out of a job, including a number of American veterans.\n\nThe situation has lead to a dramatic breakdown of stability across the country as people campaign for the return of their jobs or even stage riots to attack automated factories, leading to conflicts with EIEC strikebreakers and the Pinkertons."
-Unicom.1.a:0 "Get Edison representatives on the phone. Now."
+Unicom.1.a:0 "Get Edison representatives on the phone. NOW!"
 
 Unicom.2.t:0 "Edison's Counterattack"
 Unicom.2.d:0 "Prime Minister Coolidge was growing increasingly frustrated with the Edison Electric Company's automation policies, which were leading to widespread job losses and civil unrest. In a meeting with company representatives, he demanded that they slow down their implementation of automation and work with the government to mitigate the negative effects on workers.\n\nHowever, the Edison Electric Company was unwilling to compromise, arguing that automation was necessary for the company's long-term success and that they could not be held responsible for the social consequences. The meeting ended with both parties angry and no solution to the issue.\n\nCoolidge left the meeting feeling frustrated and powerless, as he knew that the government had limited power to regulate private companies. He realized that if he wanted to make any progress on this issue, he would need to find a different approach."
@@ -2062,6 +2065,8 @@ AME_Freedmen_Not_Support_Government_tt:0 "We have §rpoor§! relations with the 
 
 AME_Unions_Support_Government_tt:0 "We have §Gpositive§! relations with the £UC_SI_Unions §YTrade Unions§!"
 AME_Unions_Not_Support_Government_tt:0 "We have §rpoor§! relations with the £UC_SI_Unions §YTrade Unions§!"
+
+AME_EIEC_Poltiical_Influence_Low_Trigger:0 "The £GFX_EIEC  has less then §R0.1§! §YPolitical Influence§! in the Government"
 
 #AME_Southerners_Not_Radicalized_tt:0 "£UC_SI_Southerners §YSoutherners§! are §Gnot§! currrently radicalized"
 #AME_Southerners_Radicalized_tt:0 "£UC_SI_Southerners §YSoutherners§! are §Rradicalized§!"
